2007-12-19  Mathias Hasselmann  <mathias@openismus.com>

	Avoid some compiler warnings and remove obsolete code. (#339540)

	* gtk/gtkcalendar.c: Change week and year variable in
	calendar_paint_week_numbers from gint to guint. Remove obsolete "#if
	0" block from calendar_paint_day: The feature in question is handled
	few lines above. Cast data returned by gtk_selection_data_get_text()
	to (gchar*) in gtk_calendar_drag_data_received.

2007-12-19 17:05:31  Tim Janik  <timj@imendio.com>

	* modules/other/Makefile.am: include Makefile.decl to unbreak test rules.

2007-12-19  Johan Dahlin  <johan@gnome.org>

	* tests/buildertest.c (test_object_properties): 
	Add another call to gtk_builder_add_string after using
	delayed properties, as reported in #504393 but already
	fixed in #495769.

2007-12-18  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* docs/reference/Makefile.am:
	* docs/reference/libgail-util/*:
	* gail-uninstalled.pc.in:
	* gail.pc.in:
	* modules/Makefile.am:
	* modules/other/Makefile.am:
	* modules/other/gail/*:
	* modules/other/gail/libgail-util/*:
	* po/POTFILES.skip: Integrate gail into gtk+. Bug #169488.

2007-12-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksettings.c: Add a gtk-im-module GTK setting
	* gdk/win32/gdkproperty-win32.c: 
	* gdk/x11/gdksettings.c: ...and back it by a Gtk/IMModule X setting.

	* gtk/gtkimmodule.[hc]: 
	* gtk/gtkimmulticontext.[hc]: When determining the default context,
	look at the gtk-im-module setting, and listen for changes to the
	setting.  (#502446, Akira Tagoh)

2007-12-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktooltip.c (gtk_tooltip_finalize),
	(gtk_tooltip_set_last_window): use a weak pointer to set last_window
	to NULL as soon as it's destroyed.  (#496546, patch from
	Benjamin Berg).

2007-12-17  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_update_button):
	always determine what arrow to show if show_sort_indicator is true.