@@ -1,4 +1,3 @@
 demos/gtk-demo/demo.ui
 gtk/paper_names.c
-modules/other/gail/gailimage.c
 
